fix scrollbar style

--- a/src/Components/Message/Message.module.css
+++ b/src/Components/Message/Message.module.css
@@ -8,7 +8,7 @@
   border-radius: 6px;
   padding-left: 40px;
   padding-top: 33px;
-  padding-right: 26px;
+  padding-right: 36px;
 }
 
 .message:not(.disabled) {
